Add retries to broken message bus test setup